--- a/views/likes.mustache
+++ b/views/likes.mustache
@@ -2,19 +2,48 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Message Likes<title>
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="main.css">
+    <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+    <title>Gab Likes</title>
   </head>
   <body>
-    <div>
-      <ul class='navigation'>
-        <li class='navbar'><a href='/index'>Gabble</a></li>
-        <li class='navbar'><a href='/newgab'>Create a new gab</a><li>
-        <li class='navbar'><a href='/profile'>Logged in as {{user}}</a></li>
-        <li class='navbar'><a href='/logout'>Log out</a></li>
-    </ul>
-    </div><br><br>
-    <h1>Logged in as : {{user}}</h1>
+    <div class="wrapper">
+      <div class="header">
+        {{#sessionExist}}
+          <span class="welcome">Welcome {{firstname}}</span>
+        {{/sessionExist}}
+        <span>
+          <nav>
+            {{^sessionExist}}
+              <a href="/login">Login</a>
+              <a href="/signup">Sign Up</a>
+            {{/sessionExist}}
+            {{#sessionExist}}
+              <a href="/home">Gabble</a>
+              <a href="/logout">Log out</a>
+            {{/sessionExist}}
+          </nav>
+        </span>
+        <span class="title">Gab</span>
+      </div>
+
+      {{#sessionExist}}
+      <div class="fields">
+        <ul>
+          {{#allMsg}}
+            <li>{{#gabs}}<b>{{name}}</b>{{/gabs}} : {{messages}}</li>
+            <li>{{createdAt}}</li>
+          {{/allMsg}}
+        </ul>
+        <hr>
+        {{#getNumberOfLikes}}
+        <p>Liked by <b>{{getNumberOfLikes}}</b> users</p>
+        {{#likedUsersList}}
+          <p>{{#likeusers}}{{name}}{{/likeusers}}</p>
+        {{/likedUsersList}}
+        {{/getNumberOfLikes}}
+      </div>
+      {{/sessionExist}}
+    </div>
   </body>
 </html>
