--- a/views/login.mustache
+++ b/views/login.mustache
@@ -9,6 +9,7 @@
   <body>
     <h1>Login page</h1>
     <div class='container'>
+      <div class="fields">Login to view gabs</div>
       <div class="loginform">
         <form action="/login" method="post">
           <div class="errors">
