--- a/views/newgab.mustache
+++ b/views/newgab.mustache
@@ -2,31 +2,41 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="main.css">
+    <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
     <title>New Gab</title>
-    <link rel="stylesheet" href="/css/styles.css">
   </head>
   <body>
-    <div>
-      <div class="errors">
-        {{#errors}}
-        <p>{{.}}</p>
-        {{/errors}}
+    <div class="wrapper">
+      <div class="header">
+        {{#sessionExist}}
+          <span class="welcome">Welcome {{firstname}}</span>
+        {{/sessionExist}}
+        <span>
+          <nav>
+            {{^sessionExist}}
+              <a href="/login">Login</a>
+              <a href="/signup">Sign Up</a>
+            {{/sessionExist}}
+            {{#sessionExist}}
+              <a href="/home">Gabble</a>
+              <a href="/logout">Log out</a>
+            {{/sessionExist}}
+          </nav>
+        </span>
+        <span class="title">New Gab</span>
       </div>
-      <ul class='navigation'>
-        <li class='navbar'><a href='/index'>Gabble</a></li>
-        <li class='navbar'><a href='/newgab'>Create a new gab</a><li>
-        <li class='navbar'><a href='/profile'>Logged in as {{user}}</a></li>
-        <li class='navbar'><a href='/logout'>Log out</a></li>
-    </ul>
-    </div><br><br>
-    <div class='forms'id='newgab'>
-      <form action='/newgab' method='post'>
-        <p>Create a new gab</p>
-        <textarea cols='50' rows='7' name='msgBox' id='msgBox'>
-          Type 140 characters only!</textarea>
-        <input type='submit' value='Save' name='saveBtn' id='saveBtn'>
-      </form>
+      {{#sessionExist}}
+      <div class="fields">
+        <ul>
+          <li class="msg"><p>{{#messages}}{{msg}}{{/messages}}</p>
+          <form action="/newgab" method="post">
+          <li><textarea  name="newgab" id = "newgab" placeholder="Enter your gab here ..."></textarea></li>
+          <li><button type="submit" >submit</button></li>
+          </form>
+        </ul>
+      </div>
+      {{/sessionExist}}
     </div>
   </body>
 </html>
