--- a/views/likes.mustache
+++ b/views/likes.mustache
@@ -2,36 +2,26 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="main.css">
-    <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="/css/styles.css">
     <title>Gab Likes</title>
   </head>
   <body>
     <div class="wrapper">
       <div class="header">
-        {{#sessionExist}}
           <span class="welcome">Welcome {{firstname}}</span>
-        {{/sessionExist}}
         <span>
           <nav>
-            {{^sessionExist}}
-              <a href="/login">Login</a>
-              <a href="/signup">Sign Up</a>
-            {{/sessionExist}}
-            {{#sessionExist}}
-              <a href="/home">Gabble</a>
+              <a href="/index">Gabble</a>
+              <a href="/newgab">New Gab</a>
               <a href="/logout">Log out</a>
-            {{/sessionExist}}
           </nav>
         </span>
         <span class="title">Gab</span>
       </div>
-
-      {{#sessionExist}}
-      <div class="fields">
+      <div class="allMessages">
         <ul>
           {{#allMsg}}
-            <li>{{#gabs}}<b>{{name}}</b>{{/gabs}} : {{messages}}</li>
+            <li>{{#gabs}}<b>{{firstname}}</b>{{/gabs}} : {{title}}</br>{{message}}</li>
             <li>{{createdAt}}</li>
           {{/allMsg}}
         </ul>
@@ -39,11 +29,11 @@
         {{#getNumberOfLikes}}
         <p>Liked by <b>{{getNumberOfLikes}}</b> users</p>
         {{#likedUsersList}}
-          <p>{{#likeusers}}{{name}}{{/likeusers}}</p>
+          <p>{{#likeusers}}{{username}}{{/likeusers}}</p>
         {{/likedUsersList}}
         {{/getNumberOfLikes}}
       </div>
-      {{/sessionExist}}
+
     </div>
   </body>
 </html>
